--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.12.0",
     "file-saver": "^2.0.5",
+    "google-map-react": "^2.1.10",
     "html2canvas": "^1.4.1",
+    "lodash": "^4.17.21",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-google-autocomplete": "^2.7.0",
+    "react-google-maps": "^9.4.5",
+    "recompose": "^0.30.0"
   },
   "devDependencies": {
     "eslint": "8.16.0",
